[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatialxgene"
version = "0.1.0"
description = "Interactive spatial transcriptomics viewer for h5ad files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Abhishek Murti" },
]
keywords = ["spatial transcriptomics", "single cell", "h5ad", "visualization", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "dash>=2.14",
    "dash-bootstrap-components>=1.4",
    "plotly>=5.18",
    "h5py>=3.0",
    "numpy>=1.21",
    "pandas>=1.3",
    "click>=8.0",
    "scipy>=1.7",
    "datashader>=0.14",
    "colorcet>=3.0",
    "Pillow>=9.0",
]

[project.scripts]
spatialxgene = "spatialxgene.cli:main"

[project.urls]
Homepage = "https://github.com/amurti/spatialxgene"
"Bug Tracker" = "https://github.com/amurti/spatialxgene/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
spatialxgene = ["assets/*"]
